compiler/testData/cli/jvm/standaloneSamConversionsAreDisabledExplicitlyWithNewInference.out
warning: ATTENTION!
This build uses unsafe internal compiler arguments:

-XXLanguage:-SamConversionPerArgument

This mode is not recommended for production use,
as no stability/compatibility guarantees are given on
compiler or generated code. Use it at your own risk!

compiler/testData/cli/jvm/standaloneSamConversionsAreEnabledWithNewInference.kt:9:25: error: type mismatch: inferred type is () -> Unit but Runnable was expected
    ForceSam.compare(r, {})
                        ^
compiler/testData/cli/jvm/standaloneSamConversionsAreEnabledWithNewInference.kt:10:22: error: type mismatch: inferred type is () -> Unit but Runnable was expected
    ForceSam.compare({}, r)
                     ^
COMPILATION_ERROR
